--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,76 @@
           }
         }
       }
+    },
+    "busy-indicator": {
+      "projectType": "library",
+      "root": "projects/busy-indicator",
+      "sourceRoot": "projects/busy-indicator/src",
+      "prefix": "bi",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/busy-indicator/tsconfig.lib.json",
+            "project": "projects/busy-indicator/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/busy-indicator/src/test.ts",
+            "tsConfig": "projects/busy-indicator/tsconfig.spec.json",
+            "karmaConfig": "projects/busy-indicator/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/busy-indicator/tsconfig.lib.json",
+              "projects/busy-indicator/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "dynamic-dom-injector": {
+      "projectType": "library",
+      "root": "projects/dynamic-dom-injector",
+      "sourceRoot": "projects/dynamic-dom-injector/src",
+      "prefix": "ddi",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/dynamic-dom-injector/tsconfig.lib.json",
+            "project": "projects/dynamic-dom-injector/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/dynamic-dom-injector/src/test.ts",
+            "tsConfig": "projects/dynamic-dom-injector/tsconfig.spec.json",
+            "karmaConfig": "projects/dynamic-dom-injector/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/dynamic-dom-injector/tsconfig.lib.json",
+              "projects/dynamic-dom-injector/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }},
   "defaultProject": "busy-indicator-demo"
 }
