--- a/projects/busy-indicator/package.json
+++ b/projects/busy-indicator/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "busy-indicator",
-  "version": "0.0.1",
+  "name": "@acharyarajasekhar/busy-indicator",
+  "version": "1.0.0",
   "peerDependencies": {
     "@angular/common": "^8.2.14",
     "@angular/core": "^8.2.14"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/acharyarajasekhar/busy-indicator.git"
   }
 }
