--- a/projects/dynamic-dom-injector/package.json
+++ b/projects/dynamic-dom-injector/package.json
@@ -8,5 +8,8 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/acharyarajasekhar/busy-indicator.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
