--- a/projects/busy-indicator/package.json
+++ b/projects/busy-indicator/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@acharyarajasekhar/busy-indicator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "peerDependencies": {
     "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14"
+    "@angular/core": "^8.2.14",
+    "@acharyarajasekhar/dynamic-dom-injector": "^1.0.0"
   },
   "repository": {
     "type": "git",
